# spell-book

./: .gitignore  AI_README.md  Cargo.toml  README.md  cli.js  hub02-deploy.txt  package-lock.json  package.json  server.js  start.bat
.github/workflows/: hub02-pages.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
public/: app.js  index.html  style.css
scripts/: copy-prism.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: catalog.rs  lib.rs  main.rs
test/: example.asm  example.c  example.cpp  example.cr  example.cs  example.css  example.d  example.dart  example.ex  example.f90  example.fs  example.gd  example.glsl  example.go  example.groovy  example.hlsl  example.hs  example.html  example.java  example.jl  example.js  example.kql  example.kt  example.lua  example.m  example.ml  example.nim  example.odin  example.php  example.pl  example.ps1  example.py  example.r  example.rs  example.sass  example.scala  example.scss  example.sh  example.sol  example.sql  (+6 more)
test_cli/: log.txt  test_entry.json
tools/: make_icons.py
