[package]
name = "spellbook-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "spellbook_core"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
regex-lite = "0.1"
